--- a/index.html
+++ b/index.html
@@ -130,17 +130,18 @@
 
 
     <div class="page-header header-filter clear-filter" data-parallax="true"
-        style="background-image: url('assets/images/sippochan.jpg')">
+        style="background-image: url('./assets/images/sippochan.jpg')">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 ml-1">
-                    <div class="brand text-center">
-                        <h2>しっぽにちは！<br>しっぽちゃんです</h2>
+                <div class="col-md-6">
+                    <!--div class="brand text-center"-->
+                    <h1 class="h2">しっぽにちは！<br>しっぽちゃんです</h2>
                         <!--a onclick="ga('send', 'event', 'click_link', 'click', 'youtube_flyable');" href="https://www.youtube.com/watch?v=VnRiD0piabc" target="_blank" class="btn btn-danger btn-raised btn">
                             <i class="fa fa-play"></i> Vision video
                         </a-->
-                        <h4 class="title text-center">技術者・研究者のチーム<br>「Team-S!PPO」です<br><br>このページはTeam-S!PPOの<br>メディア<br>コード<br>プロダクト<br>イベント<br>などの情報にアクセスできる<br>ポータルサイトです</h3>
-                        <h6 class="title text-center">技術であなたを笑顔に<br>-Technologies for your smile-</h6>
+                        <h4 class="h4">僕たちは笑顔のための技術を創る<br>技術者・研究者のチーム<br>「Team-S!PPO」です<br></h4>
+                        <h5 class="h5"><br>このページはTeam-S!PPOの<br>・メディア<br>・コード<br>・プロダクト<br>・イベント<br>などの情報にアクセスできる<br>ポータルサイトです<br></h5>
+                        <!--h6 class="h6">技術であなたを笑顔に<br>-Technologies for your smile-</h6-->
                     </div>
                 </div>    
             </div>
@@ -165,15 +166,14 @@
                         <h5 class="description"><br><br><br>
                                 <img src="./assets/images/sippo_logo2.png" alt="Thumbnail Image"
                                 class="img-fluid"><br><br><br><br><br>
-                            笑顔のために技術を創りたい、私たちはそんな想いで集った技術者・研究者のチームです。<br><br>
-                            効率や便利を追い求めるのではなく、人が現実を密度濃く感じて暮らすことができるような技術、
-                            そんな技術を創っていきます。<br><br>
-
+                            笑顔のために技術を創りたい<br>私たちはそんな想いで集った技術者・研究者のチームです。<br><br>
+                            効率や便利を追い求めるのではなく<br>人が現実を密度濃く感じて暮らすことができるような技術<br>
+                            そんな技術を創っていきます。<br>
                             ー新しい体験を創り、自ら楽しみ、笑顔を創るー<br>
-                            AI, IoTやデザインを駆使して、そんな活動が出来る場になることを目指しています。<br><br>
-
-                            「Technologies for your smile-技術であなたを笑顔に-」<br>
+                            AI, IoTやデザインを駆使して<br>そんな活動が出来る場になることを目指しています。<br><br>
                         </h5>
+                        <h3>Technologies for your smile<br></h3>
+                        <h4>-技術であなたを笑顔に-<br></h4>
                     </div>
                 </div>
 
@@ -191,10 +191,19 @@
                                 <img src="./assets/images/products/Cheeeez1-1.png" alt="Thumbnail Image"
                                     class="img-raised rounded-circle img-fluid">
                             </div>
-                            <h4 class="card-title">cheeeez<br>(フライアブル プロトタイプ)</h4>
+                            <h4 class="card-title">cheeeez</h4><h6>(フライアブル プロトタイプ)</h6>
                             <div class="card-body">
-                                <p class="card-description">Flyable Serviceの中核の技術を組み入れたカメラアプリのプロトタイプです。
-                                    カメラでB.B.(bot)が好きだと思うものを撮るとハートがでるよ。<br>
+                                <p class="card-description">
+                                    全員が「写真」を気にすることなく「今に集中」して<br>
+                                    本当に笑顔でその場を楽しめる<br>
+                                    そんな世界素敵じゃないですか？<br><br>
+                                    カメラマンだけ思い出にいない、<br>
+                                    インスタ映えが気になってその場を本当に楽しめない、<br>
+                                    今を楽しめないなんてもったいない！<br>
+                                    cheeeezは今をもっと楽しむために
+                                    AIで良い写真を判定して自動撮影するカメラアプリのプロトタイプです。
+                                    Flyable Service（TSG2019セミファイナル進出案件）の中核の技術です。<br>
+                                    カメラスタートすれば、良い写真を自動撮影！<br>
                                     <a href="https://team-sippo.github.io/privacy_policy.html">プライバシーポリシー</a>＆<a href="https://team-sippo.github.io/cheeeez.html">アプリ説明</a>
                                 </p>
                             </div>
@@ -213,7 +222,15 @@
                             </div>
                             <h4 class="card-title">cYclip<br><br></h4>
                             <div class="card-body">
-                                <p class="card-description">自転車で行きたい場所を探すためのアプリです。<br>自転車で行ける距離のレストランを検索できて、そこまでの道順を表示できます。</p>
+                                <p class="card-description">
+                                    いい天気、そうだ！サイクリングいこう！<br>
+                                    でもどこに？？？<br>
+                                    いつも同じとこばっかりだなあ…<br><br>
+                                    cYclipは自転車で行きたい場所を探すためのアプリです。<br>
+                                    走りたい距離を設定したら表示されるレストラン一覧から
+                                    気になるお店を選ぶとそこまでのナビを表示できます。<br>
+                                    普段いかない新しいお店と出会えるかも<br>
+                                </p>
                             </div>
                             <div class="col-md-6 ml-auto mr-auto">
                                 <a href="https://play.google.com/store/apps/details?id=com.laboratory.kna.cyclip&hl=ja" class="btn btn-rose">android</a>
@@ -236,10 +253,16 @@
                                     </div>
                                     <h4 class="card-title">TAN2
                                         <br>
-                                        <small class="card-description text-muted">Technology Desginer</small>
+                                        <small class="card-description text-muted">Technology Desginer<br>ビジョン策定、コア技術開発</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">ビジョン策定、コア技術開発<br>全てはこの男から始まった。Team-S!PPOの創始者。大学ではナノ材料の研究に没頭、有名論文誌に掲載。その傍ら、好奇心旺盛で独学でプログラムを習得。IT企業に研究員として就職し、ウェアラブルデバイスでのヒューマンセンシングやデータサイエンス業務に従事。その後、AIスタートアップへ転職。S!PPOでは、妄想を形にしたい。ITとPhysicalが融合させて、人が暮らしやすい世界を創りたい。</p>
+                                        <p class="card-description">
+                                            全てはこの男から始まった。<br>Team-S!PPOの創始者。<br>
+                                            大学ではナノ材料の研究に没頭、有名論文誌に掲載。
+                                            その傍ら、好奇心旺盛で独学でプログラムを習得。
+                                            IT企業に研究員として就職し、ウェアラブルデバイスでのヒューマンセンシングやデータサイエンス業務に従事。
+                                            その後、AIスタートアップへ転職。<br>
+                                            S!PPOでは、妄想を形にしたい。ITとPhysicalが融合させて、人が暮らしやすい世界を創りたい。</p>
                                     </div>
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/hurasu1" class="btn btn-link btn-just-icon"><i
@@ -258,11 +281,12 @@
                                     </div>
                                     <h4 class="card-title">B.B. (Ph.D.)
                                         <br>
-                                        <small class="card-description text-muted">Service Design Architect</small>
+                                        <small class="card-description text-muted">Service Design Architect<br>コア技術開発、アプリケーション実装</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">コア技術開発、アプリケーション実装<br>
-                                            TSG2019セミファイナリスト。広島生まれ大阪育ち．高校時代にものづくりの楽しさを知りロボコンやロボカップなどの競技会にのめり込む．大学院でロボットの知能化の研究に従事，IEEE主催の国際会議での受賞歴等あり．博士（工学）．学術振興会特別研究員を経て，現在IT企業の研究所で勤務．直近の2年間は研究開発したヘルステックの欧州での事業化に挑戦．Team-S!PPOでは，全力で楽しみながら，新しいことにチャレンジ！
+                                        <p class="card-description">
+                                            TSG2019セミファイナリスト。<br>広島生まれ大阪育ち．高校時代にものづくりの楽しさを知りロボコンやロボカップなどの競技会にのめり込む。大学院でロボットの知能化の研究に従事，IEEE主催の国際会議での受賞歴等あり．博士（工学）．学術振興会特別研究員を経て，現在IT企業の研究所で勤務．直近の2年間は研究開発したヘルステックの欧州での事業化に挑戦．<br>
+                                            Team-S!PPOでは，全力で楽しみながら，新しいことにチャレンジ！
                                         </p>
                                     </div>
                                     <div class="card-footer justify-content-center">
@@ -282,10 +306,11 @@
                                     </div>
                                     <h4 class="card-title">K (Ph.D.)
                                         <br>
-                                        <small class="card-description text-muted">Business Developerent Director</small>
+                                        <small class="card-description text-muted">Business Developerent Director<br>メカ技術開発、ビジネスモデル策定</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">メカ技術開発、ビジネスモデル策定<br>生まれ(東京)→育ち(名古屋)→大学(東京)→就職(名古屋)と、東京と名古屋を行ったり来たり。父方の実家が農家ということもあってか家庭菜園を愛する幼少期を過ごす。大学ではエコカーを目指した燃焼計測の研究に従事し、米国留学、学術振興会特別研究員(DC1)を経て、自動車メーカー研究所に就職。現在は農業分野への課題意識から自作の水耕栽培システムを自宅で開発中。自分がこれまでできなかった領域に挑戦したい！</p>
+                                        <p class="card-description">生まれ(東京)→育ち(名古屋)→大学(東京)→就職(名古屋)と、東京と名古屋を行ったり来たり。父方の実家が農家ということもあってか家庭菜園を愛する幼少期を過ごす。大学ではエコカーを目指した燃焼計測の研究に従事し、米国留学、学術振興会特別研究員(DC1)を経て、自動車メーカー研究所に就職。現在は農業分野への課題意識から自作の水耕栽培システムを自宅で開発中。<br>
+                                            自分がこれまでできなかった領域に挑戦したい！</p>
                                     </div>
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/KKsippo1" class="btn btn-link btn-just-icon"> <i
@@ -304,10 +329,13 @@
                                     </div>
                                     <h4 class="card-title">おみー
                                         <br>
-                                        <small class="card-description text-muted">Technology Artist</small>
+                                        <small class="card-description text-muted">Technology Artist<br>デザイン・音楽、ソフトウェア品質・知的財産管理</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">デザイン・音楽、ソフトウェア品質・知的財産管理<br>Team-S!PPOの名付け親。幼少より音楽に触れ、14歳でピティナピアノステップ展開3を取得。所属する教室の演奏会では10年連続でトリをつとめる。作曲編曲が趣味で結婚式や演奏会に楽曲を提供を行う。20歳からはオーボエもはじめさらに幅を広げる。サントリーホールでの演奏経験があったり、日本経済新聞に投書が掲載されたり、遺跡発掘からシステム開発まで古今東西幅広い経験をもつマルチタレント。Team-S!PPOでは、アーティスト8、エンジニア2で右脳活動予定！
+                                        <p class="card-description">
+                                            Team-S!PPOの名付け親。<br>
+                                            幼少より音楽に触れ、14歳でピティナピアノステップ展開3を取得。所属する教室の演奏会では10年連続でトリをつとめる。作曲編曲が趣味で結婚式や演奏会に楽曲を提供を行う。20歳からはオーボエもはじめさらに幅を広げる。サントリーホールでの演奏経験があったり、日本経済新聞に投書が掲載されたり、遺跡発掘からシステム開発まで古今東西幅広い経験をもつマルチタレント。<br>
+                                            Team-S!PPOでは、アーティスト8、エンジニア2で右脳活動予定！
                                         </p>
                                     </div>
                                     <div class="card-footer justify-content-center">
