--- a/news.html
+++ b/news.html
@@ -70,12 +70,30 @@
         </div>
 
         <!--recently-->
-        <div class="row">
+        <div class="col-md-4">
+          <div class="team-player">
+              <div class="card card-plain">
+                  <div class="card-header card-header-info col-md-7  ml-auto mr-auto">
+                      <ul class="nav nav-tabs" data-tabs="tabs">
+                            <i class="material-icons">schedule</i> 2020.07.08
+                     </ul>
+            </div>                                
+                  <div class="card-body">
+                      <p class="card-description">
+                        <iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+  
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+        <!-- <div class="row">
             <div class="col-md-12">
-            <!-- Tabs with icons on Card -->
+            <Tabs with icons on Card>
             <div class="card card-nav-tabs">
                 <div class="card-header card-header-info">
-                <!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
+                <colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger">
                 <div class="nav-tabs-navigation">
                     <div class="nav-tabs-wrapper">
                     <ul class="nav nav-tabs" data-tabs="tabs">
@@ -85,16 +103,15 @@
                 </div>
                 </div>
                 <div class="card-body "></div>
-                <div class="tab-content text-center">
+                <div class="tab-content text-center ml-auto mr-auto">
                     <div class="tab-pane active" id="profile">
                       <iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                     </div>
                 </div>
                 </div>
             </div>
-            <!-- End Tabs with icons on Card -->
             </div>
-        </div>
+        </div> -->
         <!--end recently-->        
 
         <!--archive-->                
