--- a/news.html
+++ b/news.html
@@ -63,31 +63,30 @@
             <div class="section section-tabs">
                 <div class="container">
         <!--                 nav pills -->
-        <div id="navigation-pills">
-            <div class="title">
-              <h3>News</h3>
-            </div>
-        </div>
+                  <div id="navigation-pills">
+                    <div class="title ">
+                      <h3>News</h3>
+                    </div>
+                  </div>
 
         <!--recently-->
-        <div class="col-md-4">
+        <!--div class="col-md-4">
           <div class="team-player">
               <div class="card card-plain">
                   <div class="card-header card-header-info col-md-7  ml-auto mr-auto">
                       <ul class="nav nav-tabs" data-tabs="tabs">
-                            <i class="material-icons">schedule</i> 2020.07.08
+                            <i class="fa fa-clock-o"></i> 2020.07.08
                      </ul>
-            </div>                                
-                  <div class="card-body">
-                      <p class="card-description">
+            </div-->                                
+                    <button class="btn btn-rose " href="update"><i class="fa fa-clock-o"></i> 2020.07.08</button>
+                    <div class="card-body ">
+                      <p class="card-description ">
                         <iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
-  
                       </p>
-                  </div>
-              </div>
+                    </div>
+                </div>
           </div>
-      </div>
-
+          </div>
         <!-- <div class="row">
             <div class="col-md-12">
             <Tabs with icons on Card>
@@ -114,13 +113,103 @@
         </div> -->
         <!--end recently-->        
 
+
         <!--archive-->                
         <div class="row">
-          <div class="col-lg-12 col-md-12">
-                <div class="title">
+          <div class="col-lg-12 col-md-8" >
+            <div class="container">
+              <div class="title">
                   <h3>Archives</h3>
-                </div>
-                <ul class="nav nav-pills nav-pills-icons nav-pills-info justify-content-center " role="tablist">
+              </div>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n2164bd915b69" target="_blank"  rel=”noopener”><i class="fa fa-wrench"></i> 2020.07.06</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n1a11c1286e3a" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.07.01</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nddef42cfc39b" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.06.24</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n8e64d583436a" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.06.19</button>
+                  <button class="btn btn-rose "  href="https://www.youtube.com/watch?v=EEiSfNjh3UU" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2020.06.17</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n74fb649d5338" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.06.17</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n7fb31886246e" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.06.14</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/ncaa19e69a816" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.06.10</button>
+                  <button class="btn btn-rose "  href="https://note.com/hurasu1/n/n639b7cd06aaf" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.06.09</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/ned6dfe16065e" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.06.05</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n801bb052188d" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.06.03</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n99b4fd5c6353" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.06.02</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nf6383e0f511e" target="_blank"  rel=”noopener”><i class="fa fa-wrench"></i> 2020.05.30</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n4564d5acc4b6" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.05.27</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n978d84f25b24" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.05.20</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/ncb1fd5006aee" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.05.13</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n71df21e3a1b6" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.05.06</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n4b4366206b42" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.05.04</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n07e6dbc1be80" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.04.29</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nfedf9bddbffd" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.04.22</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n20edbda382b9" target="_blank"  rel=”noopener”><i class="fa fa-wrench"></i> 2020.04.18</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n70fcbec60646" target="_blank"  rel=”noopener”><i class="fa fa-wrench"></i> 2020.04.17</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n8e097a617a75" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.04.15</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/na9fce22aaf0a" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.04.12</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n3ab221578aad" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.04.08</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nca325aa338f5" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.04.05</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n549fdcf3f054" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.04.01</button>
+                  <button class="btn btn-rose "  href="https://www.youtube.com/watch?v=WrM6UjRXogM" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2020.03.25</button>
+                  <button class="btn btn-rose "  href="https://www.youtube.com/watch?v=8SuI-7Gmzlk" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2020.03.19</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n6ea1fd59f654" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.03.19</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n8a9dee83e51c" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.03.15</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n1cee4c3db319" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.03.14</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n5fed01d0c209" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.03.11</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n3dad9c6e8452" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.03.05</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n572aff41216c" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.03.01</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/na6fe389856db" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.02.26</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/W8zr8j_N1Bc" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2020.02.23</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nc75b7f49e5e9" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.02.20</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n2499cdbf48ba" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.02.13</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n7ae43f5b9bfc" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.02.12</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nb607d590ddbb" target="_blank"  rel=”noopener”><i class="fa fa-wrench"></i> 2020.02.11</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/YuEfpIluwPY" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2020.02.09</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n5de6e7639e68" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.02.09</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n38408145c5f8" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.02.01</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n95395366cff8" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.01.26</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n6fa68cd411e2" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.01.25</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n169decc1681e" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.01.23</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/BM0KiuYQVPM" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2020.01.22</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n800ac855b2c2" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.01.16</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n350924d86164" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.01.13</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n7fc5822454fe" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.01.12</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/necc852b26dcb" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2020.01.08</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nab610f3f32ca" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2020.01.06</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/xSRP5e2Zl8g" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2019.12.31</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/bgB7A0NmBGU" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2019.12.30</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/A6ax1jTEkYI" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2019.12.29</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/8MggsNlui4Q" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2019.12.28</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nad090e74785f" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2019.12.25</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n8ccc4aa31a5f" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2019.12.19</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nf9783689b44f" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2019.12.12</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n0b487b176122" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2019.12.10</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nbc026f17047c" target="_blank"  rel=”noopener”><i class="fa fa-smile-o"></i> 2019.12.01</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nfb1ed6f2c448" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2019.11.28</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/qe9yPg1uUuc" target="_blank"  rel=”noopener”  rel=”noopener”><i class="fa fa-play"></i> 2019.11.24</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n8c373cd08269" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2019.11.24</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/JqMFYybX0Sw" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2019.11.17</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nc0c7b3a28b8b" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2019.11.14</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/Ea1nkRayYz0" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2019.11.10</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n6b4681b175ac" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2019.11.09</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/nfdf5dd5367d0" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2019.11.07</button>
+                  <button class="btn btn-rose "  href="https://note.com/team_sippo/n/n99e67b98ca31" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2019.11.06</button>
+                  <button class="btn btn-default " disabled href="第2回実験デー"><i class="fa fa-wrench"></i> 2019.11.02</button>
+                  <button class="btn btn-default " disabled href="第10回定例会議"><i class="fa fa-clock-o"></i> 2019.10.30</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/ZRpBkebyzvk" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2019.10.28</button>
+                  <button class="btn btn-default " disabled href="第9回定例会議"><i class="fa fa-clock-o"></i> 2019.10.23</button>
+                  <button class="btn btn-default " disabled href="第8回定例会議"><i class="fa fa-clock-o"></i> 2019.10.16</button>
+                  <button class="btn btn-default " disabled href="第7回定例会議"><i class="fa fa-clock-o"></i> 2019.10.09</button>
+                  <button class="btn btn-rose "  href="https://youtu.be/VnRiD0piabc" target="_blank"  rel=”noopener”><i class="fa fa-play"></i> 2019.10.06</button>
+                  <button class="btn btn-default " disabled href="第6回定例会議"><i class="fa fa-clock-o"></i> 2019.10.02</button>
+                  <button class="btn btn-default " disabled href="第1回実験デー"><i class="fa fa-wrench"></i> 2019.09.27</button>
+                  <button class="btn btn-default " disabled href="第5回定例会議"><i class="fa fa-clock-o"></i> 2019.09.25</button>
+                  <button class="btn btn-default " disabled href="第4回定例会議"><i class="fa fa-clock-o"></i> 2019.09.18</button>
+                  <button class="btn btn-default " disabled href="第3回定例会議"><i class="fa fa-clock-o"></i> 2019.09.11</button>
+                  <button class="btn btn-default " disabled href="第2回定例会議"><i class="fa fa-clock-o"></i> 2019.09.04</button>
+                  <button class="btn btn-default " disabled href="第1回定例会議"><i class="fa fa-clock-o"></i> 2019.08.27</button>
+                  <button class="btn btn-default " disabled href="第1回会合"><i class="fa fa-smile-o"></i> 2019.08.10</button>
+                  <button class="btn btn-default " disabled href="第0回会合"><i class="fa fa-smile-o"></i> 2019.07.27</button>
+                
+                <!--ul class="nav nav-pills nav-pills-icons nav-pills-info justify-content-center " role="tablist"-->
                   <!--color-classes: "nav-pills-primary", "nav-pills-info", "nav-pills-success", "nav-pills-warning","nav-pills-danger"-->
                   <!--regular meeting>
                   <li class="nav-item">
@@ -152,11 +241,12 @@
                       <i class="material-icons">face</i> 
                     </a>
                   </li-->
-                  <li class="nav-item">
+
+                  <!--li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n2164bd915b69" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">build</i> 2020.07.06
                     </a>
-                  </li-->
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="https://note.com/team_sippo/n/n1a11c1286e3a" target="_blank"  rel=”noopener” role="button">
                       <i class="material-icons">schedule</i> 2020.07.01
@@ -589,10 +679,10 @@
                   </li>
                 </ul>
             </div>
-        </div>
+        </div-->
         <!--end archive-->                        
  
-             <footer class="footer footer-default">
+    <footer class="footer footer-default">
          <div class="container">
              <nav class="float-left">
                  <ul>
