--- a/index.html
+++ b/index.html
@@ -157,12 +157,17 @@
                     <h4 class="description">
                             <img src="./assets/images/sippochan2.jpg" alt="Thumbnail Image"
                             class="img-fluid">
-                            <h4>しっぽにちは！<br>
+                            <h5>しっぽにちは！<br>
                             しっぽちゃんです<br>
                             僕たちは笑顔のための技術を創る<br>
                             技術者・研究者のチーム<br>
-                            「Team-S!PPO」です<br></h4>
-                            <h5 class="h5"><br>このページはTeam-S!PPOの<br>メディア<br>コード<br>プロダクト<br>イベント<br>などの情報にアクセスできる<br>ポータルサイトです<br></h5>
+                            「Team-S!PPO」です<br></h5>
+                            <h5 class="h5"><br>このページはTeam-S!PPOの<br>
+                                <a href="https://www.youtube.com/user/korokoror">メディア</a><br>
+                                <a href="https://github.com/Team-SIPPO/">コード</a><br>
+                                <a href="#products">プロダクト</a><br>
+                                イベント<br>
+                                などの情報にアクセスできる<br>ポータルサイトです<br></h5>
                     </h4>
                 </div>
 
