--- a/news.html
+++ b/news.html
@@ -63,8 +63,8 @@
           <div class="section text-center" id="news">
             <h2 div class="title">news </h2>
                 <button class="btn btn-rose " href="update"><i class="fa fa-clock-o"></i> 2020.07.08</button>
-                <div class="card-body ">
-                  <p class="card-description ">
+                <div class="card-body justify-content-center">
+                  <p class="card-description justify-content-center">
                     <iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                   </p>
                 </div>
