--- a/index.html
+++ b/index.html
@@ -564,10 +564,10 @@
                                         <i class="fa fa-instagram"></i>instagram
                                       </a>
                                     </li-->
-                                    <button class="btn btn-rose "  href="https://www.youtube.com/user/korokoror" target="_blank"  rel=”noopener” ><i class="fa fa-play"></i></button>
-                                    <button class="btn btn-rose "  href="https://note.com/team_sippo/m/m8700090081c2" target="_blank"  rel=”noopener” ><i class="fa fa-sticky-note"></i></button>
-                                    <button class="btn btn-rose "  href="https://github.com/Team-SIPPO?tab=repositories" target="_blank"  rel=”noopener” ><i class="fa fa-github"></i></button>
-                                    <button class="btn btn-rose "  href="https://www.instagram.com/team.sippo/" target="_blank"  rel=”noopener” ><i class="fa fa-instagram"></i></button>
+                                    <a href="https://www.youtube.com/user/korokoror" class="btn btn-rose" role="button" target="_blank"  rel=”noopener” ><i class="fa fa-play"></i></a>
+                                    <a href="https://note.com/team_sippo/m/m8700090081c2" class="btn btn-rose" role="button" target="_blank"  rel=”noopener” ><i class="fa fa-sticky-note"></i></a>
+                                    <a href="https://github.com/Team-SIPPO?tab=repositories" class="btn btn-rose" role="button" target="_blank"  rel=”noopener” ><i class="fa fa-github"></i></a>
+                                    <a href="https://www.instagram.com/team.sippo/" class="btn btn-rose" role="button" target="_blank"  rel=”noopener” ><i class="fa fa-instagram"></i></a>
                                 </ul>
                             </div>
                         </div>
@@ -581,7 +581,7 @@
                         <div class="row">
                             <div class="col-md-8 ml-auto mr-auto text-center">
                                 <h5 class="description">定例会参加希望、ご感想などありましたら、ご連絡下さい。</h5>
-                                    <button class="btn btn-rose "  href="https://forms.gle/DknXk1j6go5UsXjQA" target="_blank"  rel=”noopener”><i class="material-icons">mail</i>
+                                    <a href="https://forms.gle/DknXk1j6go5UsXjQA" class="btn btn-rose" role="button" target="_blank"  rel=”noopener”><i class="material-icons">mail</i></a>
                             </div>
                         </div>
                     </div>
