--- a/index.html
+++ b/index.html
@@ -129,29 +129,29 @@
     </nav>
 
 
-    <!--div class="page-header header-filter clear-filter" data-parallax="true"
-        style="background-image: url('./assets/images/sippochan2.jpg')">
+    <div class="page-header header-filter clear-filter" data-parallax="true"
+        style="background-image: url('./assets/images/aaa.jpg')">
         <div class="container">
             <div class="row">
-                <div class="col-md-6"-->
-                    <!--div class="brand text-center"-->
-                    <!--h class="h2">しっぽにちは！<br>しっぽちゃんです</h2-->
+                <div class="col-md-6">
+                    <div class="brand text-center">
+                    <h class="h2">しっぽにちは！<br>しっぽちゃんです</h2-->
                         <!--a onclick="ga('send', 'event', 'click_link', 'click', 'youtube_flyable');" href="https://www.youtube.com/watch?v=VnRiD0piabc" target="_blank" class="btn btn-danger btn-raised btn">
                             <i class="fa fa-play"></i> Vision video
                         </a-->
-                        <!--h4 class="h4">僕たちは笑顔のための技術を創る<br>技術者・研究者のチーム<br>「Team-S!PPO」です<br></h4>
-                        <h5 class="h5"><br>このページはTeam-S!PPOの<br>・メディア<br>・コード<br>・プロダクト<br>・イベント<br>などの情報にアクセスできる<br>ポータルサイトです<br></h5-->
-                        <!--h6 class="h6">技術であなたを笑顔に<br>-Technologies for your smile-</h6-->
-                    <!--/div>
+                        <h4 class="h4">僕たちは笑顔のための技術を創る<br>技術者・研究者のチーム<br>「Team-S!PPO」です<br></h4>
+                        <h5 class="h5"><br>このページはTeam-S!PPOの<br>・メディア<br>・コード<br>・プロダクト<br>・イベント<br>などの情報にアクセスできる<br>ポータルサイトです<br></h5>
+                        <h6 class="h6">技術であなたを笑顔に<br>-Technologies for your smile-</h6>
+                    </div>
                 </div>    
             </div>
         </div>
-    </div-->
+    </div>
 
 
     <div class="main main-raised">
         <div class="container">
-            <div class="section text-center" id="About-us">
+            <!--div class="section text-center" id="About-us">
                 <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
                     <h4 class="description">
@@ -171,7 +171,7 @@
                     </h4>
                 </div>
 
-            </div>
+            </div-->
 
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
