--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="brand text-center">
-                    <h class="h2">しっぽにちは！<br>しっぽちゃんです</h2-->
+                    <h class="h2">しっぽにちは！<br>しっぽちゃんです!</h2-->
                         <!--a onclick="ga('send', 'event', 'click_link', 'click', 'youtube_flyable');" href="https://www.youtube.com/watch?v=VnRiD0piabc" target="_blank" class="btn btn-danger btn-raised btn">
                             <i class="fa fa-play"></i> Vision video
                         </a-->
